Merge branch 'jdk24' into 16-release